# algoUni

./: CMakeLists.txt  main  main.cpp
pr1/: 1.1.cpp  1.2.cpp  1.3.cpp  2.1.cpp  2.2.cpp  2.3.cpp  3.1.cpp  3.1_test.cpp  file.txt  output.txt
pr2/: hashTable.cpp
pr3/: boyerMooreTurbo.cpp  distanceCounter.cpp
pr4/: tree.cpp
pr5/: graph.cpp  test.cpp
pr6/: huffman.cpp  shannon-fano.cpp
pr7/: dynamicProgramming.cpp
